# Graphics2

./: CMakeLists.txt  cube.txt  input  pyramid.txt
src/: CMakeLists.txt  bvh.cpp  bvh.h  camera.cpp  parser.cpp  parser.h  world.cpp  world.h
src/core/: CMakeLists.txt  aabb.cpp  aabb.h  color.h  hit.cpp  hit.h  material.cpp  material.h  noise.cpp  noise.h  object.cpp  object.h  random.cpp  random.h  ray.cpp  ray.h  texture.h  vector3d.cpp  xorshiftrplus.cpp  xorshiftrplus.h
src/image/: CMakeLists.txt  pixels.cpp  pixels.h
src/materials/: CMakeLists.txt  diffuse.cpp  diffuse.h  disperse.cpp  disperse.h  glass.cpp  glass.h  isotropic.cpp  isotropic.h  lambertian.cpp  lambertian.h  metallic.cpp  metallic.h  specular.cpp  specular.h
src/objects/: CMakeLists.txt  constant_medium.cpp  constant_medium.h  sphere.cpp  sphere.h  square.cpp  square.h  triangle.cpp  triangle.h
src/textures/: CMakeLists.txt  checkerboard.cpp  checkerboard.h  custom.cpp  custom.h  gradient.cpp  gradient.h  image.cpp  image.h  marble.cpp  normal.cpp  normal.h  solid.cpp  solid.h
test/: CMakeLists.txt  test-bvh.cpp  test-camera.cpp  test-intersect.cpp  test-materials.cpp  test-pixels.cpp  test-random.cpp  test-textures.cpp  test-triangle.cpp  test-vector3d.cpp  test-world.cpp
